find_package(GTest)
if (GTEST_FOUND)
    find_package(Threads)
    find_package(Boost)
    if (Boost_FOUND)
        add_executable(${PROJECT_NAME}-test unix_serial_tests.cc)
        add_test(${PROJECT_NAME}-test ${PROJECT_NAME}-test)
        target_include_directories(${PROJECT_NAME}-test PRIVATE ${GTEST_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
        target_link_libraries(${PROJECT_NAME}-test PRIVATE ${PROJECT_NAME} ${GTEST_LIBRARIES} Threads::Threads ${Boost_LIBRARIES})
        if(NOT APPLE)
            target_link_libraries(${PROJECT_NAME}-test util)
        endif()
    endif()

    add_executable(${PROJECT_NAME}-test-timer unit/unix_timer_tests.cc)
    add_test(${PROJECT_NAME}-test-timer ${PROJECT_NAME}-test-timer)
    target_include_directories(${PROJECT_NAME}-test-timer PRIVATE ${GTEST_INCLUDE_DIRS})
    target_link_libraries(${PROJECT_NAME}-test-timer PRIVATE ${PROJECT_NAME} ${GTEST_LIBRARIES} Threads::Threads)
endif()
